# pytemp

./: .editorconfig  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: markdown.yml  pylint.yml  pytest.yml  ruff.yml
app/: game.py
