[project]
name = "pytemp"
description = "A simple Python package template"
dynamic = ["version"]
requires-python = ">=3.14"
readme = "README.md"
license = { file = "LICENSE.md"}

[project.urls]
"Homepage" = "https://github.com/wnowicki/pytemp"
"Source" = "https://github.com/wnowicki/pytemp"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=app --cov-report xml:coverage.xml --cov-report term"
testpaths = [
    "tests",
]
pythonpath = "."

[project.scripts]
my_app = "app.main:main"

[tool.coverage.run]

omit = [
    "*/__init__.py",
    "alembic/*",
]

[tool.ruff]

line-length = 100
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = [
    "E", # All errors
    "F", # PyFlakes
    "B", # Bugbear
    "Q", # Quoting
    "I", # Isort
    "S", # flake8-bandit
    "N", # pep8-naming
    "A", # flake8-builtins
    "FAST", # FastAPI specific rules
    "C4", # flake8-comprehensions
    # "FIX", # Fixme
    "LOG", # flake8-logging
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "C90", # mcCabe complexity
]

# 2. Avoid enforcing line-length violations (`E501`)
ignore = ["E501"]

# 3. Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

# 4. Ignore `E402` (import violations) in all `__init__.py` files, and in selected subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F403"]
"**/{tests,docs,tools}/*" = ["E402", "S101"]

[dependency-groups]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
]
